==========================================================================
7-02-15  : Times now display properly as 'X:00' instead of 'X: 0'.

6-30-15  : Fixed a bug where renting with a persistent follower (pet)
           with a custom name would crash the mud.

6-09-14  : Fixed item repair, any existing ticket from the prior mud will
           be invalid. Drop rates were also fixed at the same time. You
           should now see an increase in loads/drops off mobs.

6-02-14  : We have merged the MUD instances. If you had a previous account 
           (@UNDO.IT) simply create your account as you had it before, and 
	   your alts will be present. When you log in your alt you will 
	   default to an immortal room. To exit: simply enter the toilet,
           and plop your in center square. Welcome back.           

           - The codebase has been stablized and bug fixes will start 
             happening. If you find bugs that are crashing the mud please
             let us know.
             
	     Currently LD alts on the same account can cause a crash
             If you plan on running more than two alts at a time on the 
             same account contact Erasmus and get details on how to move
             your alts onto another account.

             Shaman spell Chrism, the bead necklace when worn crashes the 
             mud when it completes the affect cycle. This spell will be 
             disabled until a fix is found.
           

4-17-14  : Applied new updates to system courtesy of Cizra. 
	   -Multiplay cleaned up
           -Database fixes
           -Sprite Fixed
           -Boards Fixed
           -Various Bug Fixes
            
           Some promosing other technical fixes that could be used in
           the future IPv6 and Sneezy Application monitoring. Needs some
           tweaking to be used in this edition.	   

4-16-14  : Fixed a bug that was causing the game to crash. However, this